Forma performatica de pegar os dados

--- a/rede_neural_completa.ipynb
+++ b/rede_neural_completa.ipynb
@@ -2,12 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "id": "64fbdfbe-2af9-438c-a908-7b1f173b6b42",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/spark/python/pyspark/pandas/__init__.py:50: UserWarning: 'PYARROW_IGNORE_TIMEZONE' environment variable was not set. It is required to set this environment variable to '1' in both driver and executor sides if you use pyarrow>=2.0.0. pandas-on-Spark will set it for you but it does not work if there is a Spark context already launched.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "import pyspark\n",
     "from pyspark.pandas import DataFrame\n",
@@ -163,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 6,
    "id": "5260fe7d-44f3-478e-8ac7-18638d1c1136",
    "metadata": {
     "tags": []
@@ -197,7 +206,7 @@
     "      .add(\"year\", IntegerType(), True) \\\n",
     "      .add(\"views\", IntegerType(), True) \\\n",
     "      .add(\"features\", StringType(), True) \\\n",
-    "      .add(\"lyrics\", StringType(), True) \\\n",
+    "      .add(\"lyrics\", StringType(), False) \\\n",
     "      .add(\"id\", IntegerType(), True) \\\n",
     "      .add(\"language_cld3\", StringType(), True) \\\n",
     "      .add(\"language_ft\", StringType(), True) \\\n",
@@ -216,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 7,
    "id": "8bf5c7a8-0e46-4b2d-9642-1bd2f4d414cd",
    "metadata": {
     "tags": []
@@ -230,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 8,
    "id": "ea95d1b6-3be9-404a-a94b-a993041d7738",
    "metadata": {
     "tags": []
@@ -244,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 9,
    "id": "e3c42bb8-2311-4d15-a30a-6a8456484c66",
    "metadata": {
     "tags": []
@@ -267,6 +276,76 @@
    ],
    "source": [
     "df.printSchema()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "a0c8da9e-21d9-486d-b0ea-1d73256bff79",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20000"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.where(df.id > 10_000).limit(20_000).count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "deceecf9-084f-4f36-a819-b4d2cea7ab78",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+---+--------------------+--------------------+--------+---+\n",
+      "|               title|tag|            features|              lyrics|language| id|\n",
+      "+--------------------+---+--------------------+--------------------+--------+---+\n",
+      "|           Killa Cam|rap|{\"Cam\\\\'ron\",\"Ope...|[Chorus: Opera St...|      en|  0|\n",
+      "|          Can I Live|rap|                  {}|[Produced by Irv ...|      en|  1|\n",
+      "|   Forgive Me Father|rap|                  {}|Maybe cause I'm e...|      en|  2|\n",
+      "|        Down and Out|rap|{\"Cam\\\\'ron\",\"Kan...|[Produced by Kany...|      en|  3|\n",
+      "|              Fly In|rap|                  {}|[Intro]\\nSo they ...|      en|  4|\n",
+      "|      Lollipop Remix|rap|{\"Kanye West\",\"St...|[Intro: Lil Wayne...|      en|  5|\n",
+      "|          Im Not You|rap|{Jadakiss,\"Styles...|[Intro: Pusha T]\\...|      en|  6|\n",
+      "|         Family Ties|rap|{\"Cam\\\\'ron\",\"Lad...|[Verse 1: Cam'ron...|      en|  7|\n",
+      "|   Rockin and Rollin|rap|       {\"Cam\\\\'ron\"}|[Verse 1]\\nAy yo ...|      en|  8|\n",
+      "|       Lord You Know|rap|{\"Cam\\\\'ron\",\"Jue...|[Chorus: Jaheim]\\...|      en|  9|\n",
+      "|    Money On My Mind|rap|                  {}|[Intro]\\nYeah\\nMo...|      en| 10|\n",
+      "|     Think Yall Know|rap|                  {}|[Verse 1]\\nYou ai...|      en| 11|\n",
+      "|              DEvils|rap|                  {}|[Produced by DJ P...|      en| 12|\n",
+      "|        December 4th|rap|                  {}|[Produced by Just...|      en| 13|\n",
+      "|        98 Freestyle|rap|                  {}|[Verse 1]\\nYo, fu...|      en| 14|\n",
+      "|What Happened to ...|rap|            {Clipse}|[Intro: Birdman]\\...|      en| 15|\n",
+      "|Its Hot Some Like...|rap|                  {}|[Produced by Timb...|      en| 16|\n",
+      "| Losing Weight Pt. 2|rap|{\"Cam\\\\'ron\",\"Jue...|[Chorus: Cam'ron]...|      en| 17|\n",
+      "|       Its Like That|rap|       {\"Kid Capri\"}|[Intro: Jay-Z, Ki...|      en| 18|\n",
+      "|  More Gangsta Music|rap|{\"Cam\\\\'ron\",\"Jue...|[Intro: Juelz San...|      en| 19|\n",
+      "+--------------------+---+--------------------+--------------------+--------+---+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# df_ = df.limit(10_000)\n",
+    "# df_subtracted = df.subtract(df_)\n",
+    "# df_.show()"
    ]
   },
   {
