Arquivos de treino do modelo + baseline

--- a/proof-of-concepy.ipynb
+++ b/proof-of-concepy.ipynb
@@ -83,6 +83,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {
     "tags": []
@@ -90,7 +97,7 @@
    "outputs": [],
    "source": [
     "wanted_tag = 'pop'\n",
-    "genre_filtered = df.filter(df.tag == wanted_tag)\n",
+    "genre_filtered = df.filter(f\"tag = {wanted_tag} AND language = en\")\n",
     "n_rows = genre_filtered.count()"
    ]
   },
@@ -2220,7 +2227,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def compute_accuracy(x):\n",
+    "def compute_accuracy(x, test) -> int:\n",
+    "    total = len(test)\n",
+    "    right = 0\n",
+    "    for text in test:\n",
+    "        target = text[-1]\n",
+    "        pred = complete_text(model, text[:-1])\n",
+    "        if pred == target:\n",
+    "            right += 1\n",
+    "    return right / total\n",
+    "        \n",
     "    "
    ]
   }
@@ -2241,7 +2257,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
