Convert data to parquet + train_test baseline + train_model working

--- a/proof-of-concepy.ipynb
+++ b/proof-of-concepy.ipynb
@@ -83,13 +83,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "metadata": {
     "tags": []
@@ -97,8 +90,7 @@
    "outputs": [],
    "source": [
     "wanted_tag = 'pop'\n",
-    "genre_filtered = df.filter(f\"tag = {wanted_tag} AND language = en\")\n",
-    "n_rows = genre_filtered.count()"
+    "genre_filtered = df.filter(f\"tag = {wanted_tag} AND language = 'en'\")"
    ]
   },
   {
@@ -371,12 +363,15 @@
     }
    ],
    "source": [
-    "N_ROWS = 3_093_218\n",
+    "seed = 69\n",
+    "train, test = genre_filtered.randomSplit([0.8, 0.2], seed)\n",
+    "\n",
+    "n_rows = train.count()\n",
     "WANTED_ROWS = 60_000\n",
     "frac = WANTED_ROWS / n_rows\n",
     "print(frac)\n",
     "\n",
-    "sampled = genre_filtered.sample(fraction=frac).toPandas()\n",
+    "sampled = train.sample(fraction=frac).toPandas()\n",
     "sampled"
    ]
   },
@@ -2198,27 +2193,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'] what the fuck out of the sunrise , baby'"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "texto_gerado = model.generate(10, random_seed=1)\n",
-    "texto_gerado = [token for token in texto_gerado if token != '<s>' and token != '</s>']\n",
-    "texto_gerado = ' '.join(texto_gerado)\n",
-    "texto_gerado"
+    "import pickle\n",
+    "f = open('baseline-model.pickle', 'wb')\n",
+    "pickle.dump(model, f)\n",
+    "f.close()"
    ]
   },
   {
